# tgmo

./: Dockerfile  README.md  kucing.env  pyproject.toml
lamora/: __init__.py  __main__.py  config.py
lamora/modules/: mongo.py  start.py
lamora/utils/: __init__.py  _extract.py  _filters.py  _mongo.py
